--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="nav_share">Share</string>
     <string name="nav_courses">Courses</string>
     <string name="title_activity_course">Course Information</string>
+
+    <string name="EXTRA_COURSE_OBJECT">com.me.extra.MY_NAME</string>
+
 </resources>
