Added dialog for editing course

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,8 @@
     <string name="title_activity_course">Course Information</string>
 
     <string name="EXTRA_COURSE_OBJECT">com.me.extra.MY_NAME</string>
+    <string name="action_edit">Edit Course</string>
+    <string name="action_clear">Delete all courses</string>
+    <string name="action_delete">Delete course</string>
 
 </resources>
