Fixed interface for Course Activity, other serialization issues

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,10 +14,10 @@
     <string name="nav_share">Share</string>
     <string name="nav_courses">Courses</string>
     <string name="title_activity_course">Course Information</string>
-
     <string name="EXTRA_COURSE_OBJECT">com.me.extra.MY_NAME</string>
     <string name="action_edit">Edit Course</string>
     <string name="action_clear">Delete all courses</string>
     <string name="action_delete">Delete course</string>
+    <string name="module_topics">Topics %1$d/%2$d</string>
 
 </resources>
