--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,11 @@
     <string name="action_delete">Delete course</string>
     <string name="module_topics">Topics %1$d/%2$d</string>
     <string name="examinations">Examinations</string>
+    <string name="course_name">Course Name</string>
+    <string name="minus">-</string>
+    <string name="course_default_modules">2</string>
+    <string name="number_of_modules">Number of modules</string>
+    <string name="plus">+</string>
+    <string name="action_discard">Discard changes</string>
 
 </resources>
