--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
     <string name="app_name">Routine</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_dashboard">DashboardActivity</string>
-
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_dashboard">Dashboard</string>
@@ -14,7 +13,7 @@
     <string name="nav_share">Share</string>
     <string name="nav_courses">Courses</string>
     <string name="title_activity_course">Course Information</string>
-    <string name="EXTRA_COURSE_OBJECT">com.me.extra.MY_NAME</string>
+    <string name="EXTRA_COURSE_UUID">com.me.extra.course_uuid</string>
     <string name="action_edit">Edit Course</string>
     <string name="action_clear">Delete all courses</string>
     <string name="action_delete">Delete course</string>
