--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="minus">-</string>
     <string name="course_default_modules">2</string>
     <string name="number_of_modules">Number of modules</string>
-    <string name="plus">+</string>
+    <string name="module_list_title">Module %1$d</string>
     <string name="action_discard">Discard changes</string>
 
 </resources>
