* Switched to RecyclerView in module update card * Changes persist across all views now * Progress bar updates properly

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,8 @@
     <string name="nav_share">Share</string>
     <string name="nav_courses">Courses</string>
     <string name="title_activity_course">Course Information</string>
-    <string name="EXTRA_COURSE_UUID">com.me.extra.course_uuid</string>
+    <string name="EXTRA_COURSE_UUID">com.siddhant.extra.course_uuid</string>
+    <string name="EXTRA_MODULE_UUID">com.siddhant.extra.module_uuid</string>
     <string name="action_edit">Edit Course</string>
     <string name="action_clear">Delete all courses</string>
     <string name="action_delete">Delete course</string>
